rns-lang/tests/snapshots/diagnostic/err-lexer-integers-invalid_format_letters.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public Test
.code 123abc

----- STDOUT -----

----- STDERR -----
Error: invalid integer
   ╭─[ test_data/diagnostic/err/lexer/integers/invalid_format_letters.ja:2:7 ]
   │
 2 │ .code 123abc
   │       ───┬──  
   │          ╰──── '123abc' contains invalid characters
   │ 
   │ Note: Integers must be between -2147483648 and 2147483647
───╯
