rns-lang/tests/snapshots/diagnostic/err-lexer-strings-unknown_escape_sequence.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public Test
.code "\u"

----- STDOUT -----

----- STDERR -----
Error: invalid escape sequence
   ╭─[ test_data/diagnostic/err/lexer/strings/unknown_escape_sequence.ja:2:9 ]
   │
 2 │ .code "\u"
   │         ┬  
   │         ╰── invalid escape sequence '\u'
   │ 
   │ Note: The character '\u' is not a valid escape sequence.
───╯
